# fb-agent

./: README-agent2.md  README.md  fb-agent.service  pyproject.toml
src/fb_agent/: agent_id.py  app.py  cli.py  dashboard_discovery.py  fm_discovery.py  fm_list_parser.py  paths.py  pty_executor.py  security.py
