[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "fb-agent"
version = "0.1.0"
description = "Frappe Manager Backup Agent (fb-agent)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Frappe Manager Backup" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pexpect>=4.9.0",
]

[project.scripts]
fb-agent = "fb_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fb_agent"]


